--- a/annexe/requirements.txt
+++ b/annexe/requirements.txt
@@ -1,2 +1,20 @@
+astroid==2.5.8
+certifi==2021.10.8
+charset-normalizer==2.0.12
+cloc==0.2.5
+colored==1.4.3
+flake8==4.0.1
+idna==3.3
+isort==5.10.1
+lazy-object-proxy==1.7.1
+mccabe==0.6.1
+platformdirs==2.5.1
+pycodestyle==2.8.0
+pyflakes==2.4.0
 pygame==2.1.2
 pylint==2.7.2
+requests==2.27.1
+toml==0.10.2
+typing_extensions==4.1.1
+urllib3==1.26.8
+wrapt==1.12.1
